@@ -1094,7 +1094,14 @@ def fetch(myuris, listonly=0):
 						# no exception?  file exists. let digestcheck() report
 						# an appropriately for size or md5 errors
 						if myret and (mystat[ST_SIZE]<mydigests[myfile]["size"]):
-							# Fetch failed... Try the next one...
+							# Fetch failed... Try the next one... Kill 404 files though.
+							if (mystat[ST_SIZE]<100000) and (len(myfile)>4) and not ((myfile[-5:]==".html") or (myfile[-4:]==".htm")):
+								html404=re.compile("<title>.*(not found|404).*</title>",re.I|re.M)
+								try:
+									if html404.search(open(settings["DISTDIR"]+"/"+myfile).read()):
+										os.unlink(settings["DISTDIR"]+"/"+myfile)
+								except:
+									pass
 							continue
 						fetched=2
 						break
